Fixed spacing on contact me page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,8 +114,9 @@ input
 
 label, input
     {
-        margin-bottom: 5px;
-        margin-top: 5px;
+        margin-bottom: 10px;
+        margin-top: 10px;
+        padding: 1px;
     }
 
 article
